MODON MRE BPDEV/force-app/main/default/objects/Step_Assignment__c/Step_Assignment__c.object-meta.xml
<CustomObject>
    <label>Step Assignment</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Step Assignment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>