MODON MRE BPDEV/force-app/main/default/objects/Step_Assignment__c/fields/Assignment_Time__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Time__c</fullName>
    <label>Assignment Hours</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>